--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,14 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- <link rel="stylesheet" href="assets/css/style.min.css"> -->
+
+    <!-- JQUERY -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.slim.js"
+      integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
+      crossorigin="anonymous"
+    ></script>
+    
   </head>
   <body>
     <main class="main-wrapper">
